Добавлено выподающее меню с функциями удаления, переименования, создания новой папки; пути преведены к платформонезависимой форме, мелки правки...